--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fondamenti JS</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>JavaScript: Giorno 1</h1>
+    </header>
+
+    <script src="./JavaScript/file.js">
+      // Si puó giá scrivere codice JS qui dentro ma non lo faró mai
+    </script>
+  </body>
 </html>
